--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,10 @@
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
