--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
